# dmd-workshop

./: .gitignore  README.md  pyproject.toml
data/hawk/: README.md
data/hawk/processed/: toothless_control_9m_avg.npz  toothless_flapping_9m_avg.npz  toothless_rightturn_obstacle_avg.npz  toothless_single_flight_raw.npz
data/spider/: spider_walking.npz
notebooks/: 00_build_your_own_animal.ipynb  01_intro_dmd.ipynb  02_bird_flight_dmd.ipynb  03_build_your_own_animal.ipynb  03_custom_dmd.ipynb  04_custom_dmd.ipynb  05_spider_walking_dmd.ipynb
scripts/: colab_setup.py
src/animal_dmd/: __init__.py  custom.py  data.py  dmd.py  plots.py  setup.py  toy.py
tests/: test_custom.py  test_plots.py
